bayeux integration tests